注册页面基本完成

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,2 +1,8 @@
 /*加载字体图标*/
 @import"./iconfont.less";
+.van-nav-bar__content {
+    background-color: #3296fa;
+    .van-ellipsis{
+        color: #fff;
+      }
+  }
