--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,2 +1,8 @@
 /*加载字体图标*/
 @import "./iconfont.less";
+.van-nav-bar__content {
+  background-color: #3296fa;
+}
+.van-nav-bar__content .van-ellipsis {
+  color: #fff;
+}
